--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,13 @@
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Gemba Blog
+email: support@gemba.io
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  On this blog, I share tips on how to use Gemba, and lessons learned while creating it.
+#  (Gemba is the Mac app that lets designers deliver assets into Git repositories with a simple drag and drop.)
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://blog.gemba.io" # the base hostname & protocol for your site
+twitter_username: GembaApp
+# github_username:  jekyll
 
 # Build settings
 markdown: kramdown
